--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a:hover {
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    background-color: cyan;
+    background-color: black;
 }
 
 .first {
